added base styles for list page and first layout for company page

--- a/source/templates/_base.html
+++ b/source/templates/_base.html
@@ -20,11 +20,8 @@
         <header class="top-bar">
         <span class="top-bar__button js-trigger-menu">menu</span>
         <nav class="main-menu js-target-menu main-menu--left">
-          <a href="./base-elements.html">Base Elements</a>
-          <a href="./form.html">Form</a>
-          <a href="./sections.html">Sections</a>
-          <a href="./components.html">Base Components</a>
-          <a href="./special-components.html">Special Components</a>
+          <a href="./company-page.html">Company Page</a>
+          <a href="./list-page.html">List Page</a>
         </nav>
         <a class="top-bar__logo" href="./"><img src="images/govlab-logo-white.png" alt="The GovLab"></a>
         <span class="top-bar__button js-trigger-menu">more_vert</span>
