--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -1,7 +1,7 @@
 {% extends '_base.html' %}
 
 {% block content %}
-<div class="top-section top-section--main-color od500-header">
+<div class="top-section top-section--main-color homepage-header">
   <h1>Open Data 150</h1>
   <h2>Canada</h2>
 </div>
