--- a/source/sass/_custom.scss
+++ b/source/sass/_custom.scss
@@ -8,17 +8,36 @@
 }
 
 
-.od500-header {
+.homepage-header {
   h1 {
     font-size: 2.5rem;
     text-transform: uppercase;    
   }
 
   h2 {
-    margin: 0;
+    margin: 0 0 80px 0;
     font-size: 1.2rem;
     font-weight: bold;
+
   }
+}
+
+.company-header {
+  @extend .homepage-header;
+
+  p { margin: 0; }
+
+  &__left-panel {
+    text-align: left;
+
+
+  }
+
+  &__right-panel {
+    text-align: right;
+  }
+
+
 }
 
 
@@ -62,6 +81,90 @@
 .survey-button {
   margin-bottom: 10px;
 }
+
+
+// Company List - Temp
+
+.company {
+  transition: all .4s ease;
+  &__type { max-width: 100px; }
+  &__founded { max-width: 150px; }
+  &__location { max-width: 250px; }
+  &__last-updated { max-width:250px; }
+
+  &:hover {
+    background-color: rgba($black, .1);
+    transition: all .2s ease;
+  }
+}
+
+.datasets {
+  
+  &__list {
+    margin: 0;
+    padding: 0;
+
+    li {
+      
+    }
+  }
+}
+
+.dataset-item {
+  margin-bottom: 6px;
+  display: block;
+  text-transform: none;
+  background-color: rgba($black, .05);
+  @extend .u-clearfix;
+  
+  &__name {
+    float: left;
+    padding: 15px 20px;
+    font-weight: bold;
+  }
+
+  &__controls {
+    float: right;
+  }
+}
+
+.controls {
+  &__item {
+    @extend .button;
+    @extend .button--icon-only;
+    color: rgba($black, .2);
+    background-color: transparent;
+    margin-left: -4px;
+
+    &:hover {
+      background-color: rgba($black, .2);    
+      color: $white;
+    }
+  }
+}
+
+.company-header {
+
+}
+
+.button--company-website {
+  position: relative;
+  padding-left: 40px;
+  padding-right: 40px;
+  font-weight: bold;
+  background-color: $accent-color;
+  bottom: -57px;
+  box-shadow: 2px 2px 10px rgba($black, .2);
+
+  &:hover {
+    background-color: darken($accent-color, 8);
+  }
+}
+
+
+
+
+
 
 
 
