--- a/source/sass/custom-styles.scss
+++ b/source/sass/custom-styles.scss
@@ -8,6 +8,9 @@ $accent-color: $orange;
 
 @import 'card-team';
 @import 'timeline';
+@import 'controls';
+@import 'company';
+@import 'table-sortable';
 
 @import 'custom';
 
