--- a/source/sass/styleguide/components/_page-section.scss
+++ b/source/sass/styleguide/components/_page-section.scss
@@ -10,6 +10,8 @@
     h4 { text-transform: uppercase; }
 }
 
+.page-section--short { padding: 0 !important; }
+
 .page-section--purple,
 .page-section--black,
 .page-section--teal,
