added css for fixed header to the sortable table. JS needed

--- a/source/sass/_company.scss
+++ b/source/sass/_company.scss
@@ -1,17 +1,17 @@
 // Company List - Temp
 
-
-
 .company {
   transition: all .4s ease;
 
   th:first-child,
-  td:first-child { padding-left: 50px; }
+  td:first-child { width: 50px; }
 
-  &__type { max-width: 120px; }
-  &__founded { max-width: 150px; }
-  &__location { max-width: 250px; }
-  &__last-update { max-width:250px; }
+  &__name        { width: 580px; }
+  &__category    { width: 320px; }
+  &__type        { width: 300px; }
+  &__founded     { width: 200px; }
+  &__location    { width: 300px; }
+  &__last-update { width: 180px; }
 
   &:hover {
     background-color: rgba($black, .1);
