added full team

--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -161,7 +161,7 @@
           <div class="card-team__content" style="background-image: url(images/team/stefaan-verhulst.jpg)">
             <div class="card-team__info">
               <h1>Stefaan Verhulst</h1>
-              <h2>Director of GovLab's Open Data Projects</h2>
+              <h2>Co-founder and Director of GovLab's Open Data Projects</h2>
               <h3>The GovLab</h3>
             </div>
           </div>
@@ -191,6 +191,17 @@
     </div>
     <div class="column large-3 medium-4 small-12">
       <article class="card-team" >
+          <div class="card-team__content" style="background-image: url(images/team/christopher-wong.jpg)">
+            <div class="card-team__info">
+              <h1>Christopher Wong</h1>
+              <h2>Director of Product</h2>
+              <h3>The GovLab</h3>
+            </div>
+          </div>
+        </article>
+    </div>
+    <div class="column large-3 medium-4 small-12">
+      <article class="card-team" >
           <div class="card-team__content" style="background-image: url(images/team/claudio-mendonca.jpg)">
             <div class="card-team__info">
               <h1>Claudio Mendonca</h1>
@@ -213,9 +224,9 @@
     </div>
     <div class="column large-3 medium-4 small-12">
       <article class="card-team" >
-          <div class="card-team__content" style="background-image: url(images/team/denny-tek.jpg)">
+          <div class="card-team__content" style="background-image: url(images/team/mark-adkins-hastings.jpg)">
             <div class="card-team__info">
-              <h1>Denny Tek</h1>
+              <h1>Mark Adkins</h1>
               <h2>Developer</h2>
               <h3>The GovLab</h3>
             </div>
@@ -224,21 +235,10 @@
     </div>
     <div class="column large-3 medium-4 small-12">
       <article class="card-team" >
-          <div class="card-team__content" style="background-image: url(images/team/denny-tek.jpg)">
+          <div class="card-team__content" style="background-image: url(images/team/anna-bialas.jpg)">
             <div class="card-team__info">
-              <h1>Denny Tek</h1>
-              <h2>Developer</h2>
-              <h3>The GovLab</h3>
-            </div>
-          </div>
-        </article>
-    </div>
-    <div class="column large-3 medium-4 small-12">
-      <article class="card-team" >
-          <div class="card-team__content" style="background-image: url(images/team/denny-tek.jpg)">
-            <div class="card-team__info">
-              <h1>Denny Tek</h1>
-              <h2>Developer</h2>
+              <h1>Anna Bialas</h1>
+              <h2>Intern</h2>
               <h3>The GovLab</h3>
             </div>
           </div>
