--- a/source/templates/_base.html
+++ b/source/templates/_base.html
@@ -22,6 +22,7 @@
         <nav class="main-menu js-target-menu main-menu--left">
           <a href="./company-page.html">Company Page</a>
           <a href="./list-page.html">List Page</a>
+          <a href="./resources.html">Resources</a>
         </nav>
         <a class="top-bar__logo" href="./"><img src="images/govlab-logo-white.png" alt="The GovLab"></a>
         <span class="top-bar__button js-trigger-menu">more_vert</span>
