--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -6,6 +6,11 @@
   <h2>Canada</h2>
 </div>
 
+<section class="page-section">
+
+
+</section>
+
 <section class="page-section page-section--highlight">
   <div class="row align-center">
     <div class="column large-8">
