--- a/source/sass/_custom.scss
+++ b/source/sass/_custom.scss
@@ -17,7 +17,8 @@
   }
 }
 
-.homepage-header {
+.homepage-header,
+.resources-header {
   h1 {
     font-size: 2.5rem;
     text-transform: uppercase;    
@@ -148,7 +149,30 @@
   }
 }
 
+.resource-item {
+  padding: 30px 0;
 
+  &:nth-child(even) {
+    background-color: rgba($black, .05);
+  }
+
+  &__content {
+    font-size: 1.2rem;
+    margin: 0;
+    text-transform: none;
+  }
+
+  &__author {
+    font-size: 1rem;
+    margin: 0;
+    font-style: italic;
+  }
+
+  &__source {
+    font-size: .8rem;
+    margin: 0;
+  }
+}
 
 
 
